[tool.poetry]
name = "pyjapt"
version = "0.1.2"
description = "Just Another Parsing Tool Writ ten in Python"
authors = ["Alejandro Klever <alejandroklever4197@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/alejandroklever/PyJapt"
exclude = ["tests/excluded.py"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
