[tool.poetry]
name = "pyjapt"
version = "0.3.5"
description = "Just Another Parsing Tool Written in Python"
authors = ["Alejandro Klever <alejandroklever.workon@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/alejandroklever/PyJapt"
exclude = ["tests/excluded.py"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
