[tool.poetry]
name = "pyjapt"
version = "0.4.1"
description = "Just Another Parsing Tool Written in Python"
authors = ["Alejandro Klever <alejandroklever@alejandroklever.dev>"]
readme = "README.md"
homepage = "https://github.com/alejandroklever/PyJapt"
exclude = ["tests/excluded.py"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slr: test using the slr parser",
    "serial",
]